log
Thu, May  1, 2025 11:03:34 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
5729e4d
Thu, May  1, 2025 11:04:09 PM: 
 tests:  1|8
total_score: 0/70
b930a7e
Sat, May  3, 2025  5:03:05 PM: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
2347930
Sat, May  3, 2025  5:14:39 PM: 
 treemap.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'insertTreeMap':
treemap.c:52:26: warning: implicit declaration of function '_createTreeNode'; did you mean 'createTreeNode'? [-Wimplicit-function-declaration]
   52 |     TreeNode* new_node = _createTreeNode(key, value);
      |                          ^~~~~~~~~~~~~~~
      |                          createTreeNode
treemap.c:52:26: warning: initialization of 'TreeNode *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
treemap.c:54:16: warning: 'return' with a value, in function returning void [-Wreturn-type]
   54 |         return NULL;
      |                ^~~~
treemap.c:51:6: note: declared here
   51 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:59:16: warning: 'return' with a value, in function returning void [-Wreturn-type]
   59 |         return NULL;
      |                ^~~~
treemap.c:51:6: note: declared here
   51 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
C:/msys64/ucrt64/bin/../lib/gcc/x86_64-w64-mingw32/13.2.0/../../../../x86_64-w64-mingw32/bin/ld.exe: C:\Users\Ramon\AppData\Local\Temp\ccC7weWs.o: in function `insertTreeMap':
C:/Users/Ramon/Desktop/Lab4/lab-4-rboles-binarios-de-b-squeda-Raymon1213/test.c:52:(.text+0x162): undefined reference to `_createTreeNode'
collect2.exe: error: ld returned 1 exit status
4ada197
Sat, May  3, 2025  5:15:25 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'insertTreeMap':
treemap.c:52:26: warning: implicit declaration of function '_createTreeNode'; did you mean 'createTreeNode'? [-Wimplicit-function-declaration]
   52 |     TreeNode* new_node = _createTreeNode(key, value);
      |                          ^~~~~~~~~~~~~~~
      |                          createTreeNode
treemap.c:52:26: warning: initialization of 'TreeNode *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
C:/msys64/ucrt64/bin/../lib/gcc/x86_64-w64-mingw32/13.2.0/../../../../x86_64-w64-mingw32/bin/ld.exe: C:\Users\Ramon\AppData\Local\Temp\ccUSBMA8.o: in function `insertTreeMap':
C:/Users/Ramon/Desktop/Lab4/lab-4-rboles-binarios-de-b-squeda-Raymon1213/test.c:52:(.text+0x162): undefined reference to `_createTreeNode'
collect2.exe: error: ld returned 1 exit status
d293336
Sat, May  3, 2025  5:16:02 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
96230aa
